lab1/Test/L1-A-3-10.output
Error Type A at Line 3
Error Type B at Line 6
Error Type A at Line 6
Error Type B at Line 8
Error Type A at Line 8
