lab1/Test/L1-A-3-10.cmm
struct iEpZfj {
}THT9sV6dandrHGqeF [ 1408893278 ] , bbkVP3sBnks [ 
  1331605819 ] '

;
>= float K1BWh1jodSCYc ( ^) {
}
! :